--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,21 @@
-<%= @user.name %>, <%= @user.email %>
+<table class="profile" summary="Profile information">
+	<tr>
+		<td class="main">
+			<h1>
+				<%= gravatar_for @user %>
+				<%= @user.name %>
+			</h1>
+			<% unless @user.microposts.empty? %>
+				<table class="microposts" summary = "User posts">
+					<%= render @microposts %>
+				</tabl>
+				<%= will_paginate @microposts %>
+			<% end %>
+		</td>
+		<td class="sidebar round">
+			<strong>Name</strong> <%= @user.name %><br/>
+			<strong>URL</strong><%= link_to user_path(@user), @user %> <br />
+			<strong>Microposts</strong> <%= @user.microposts.count %>
+		</td>
+	</tr>
+</table>
